Ajout de la page après la réponse à la question

--- a/accueil.html
+++ b/accueil.html
@@ -7,22 +7,18 @@
 
     <link rel="stylesheet"  type="text/css" href="css/accueil.css" />
     <script src="accueil.js" defer></script>
+    <script src="answer.js" defer></script>
   </head>
 
   <body>
-
-
     <div id="main-container">
         <div id="question">
-            <h2>Do you want to be my valentine Aeeda?</h2>
+            <h1 id="questionText">Do you want to be my valentine Aeeda?</h1>
             <div id="buttons">
-                <button class="btn btn-yes">Yes 💖</button>
+                <button class="btn btn-yes" id="yesBtn" >Yes 💖</button>
                 <button class="btn btn-no"  id="noBtn">No 💔</button>
             </div>
         </div>
     </div>
-
-
-
   </body>
 </html>
