Ajout de la musique et aussi des animations

--- a/accueil.html
+++ b/accueil.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <audio id="bgMusic" src="music/ballade.mp3" loop></audio>
     <div id="main-container">
         <div id="question">
             <h1 id="questionText">Do you want to be my valentine Aeeda?</h1>
