Ajout du profile, toutes les infos et les photos

--- a/accueil.html
+++ b/accueil.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width" />
     <title>Accueil</title>
 
-    <link rel="stylesheet"  type="text/css" href="css/accueil.css" />
-    <script src="accueil.js" defer></script>
-    <script src="answer.js" defer></script>
+    <link rel="stylesheet"  type="text/css" href="/css/accueil.css" />
+    <link rel="stylesheet"  type="text/css" href="/css/header.css" />
+    <script src="/js/accueil.js" defer></script>
+    <script src="/js/answer.js" defer></script>
+    <script src="/js/header.js" defer></script>
   </head>
+
+  <header>
+    <div id="header">
+        <ul id="liste-header">
+            <li><a class="menu droite" href="/accueil.html">Home</a></li>
+            <li><a class="menu droite" href="/html/profile.html">Profile</a></li>
+        </ul>
+    </div>
+
+  </header>
 
   <body>
     <audio id="bgMusic" src="music/ballade.mp3" loop></audio>
