Change accueil en index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div id="header">
         <ul id="liste-header">
-            <li><a class="menu droite" href="/accueil.html">Home</a></li>
+            <li><a class="menu droite" href="/index.html">Home</a></li>
             <li><a class="menu droite" href="/html/profile.html">Profile</a></li>
         </ul>
     </div>
