--- a/html/profile.html
+++ b/html/profile.html
@@ -14,7 +14,7 @@
   <header>
     <div id="header">
         <ul id="liste-header">
-            <li><a class="menu droite" href="/accueil.html">Home</a></li>
+            <li><a class="menu droite" href="/index.html">Home</a></li>
             <li><a class="menu" href="/html/profile.html">Profile</a></li>
         </ul>
     </div>
