Essaye de réparer les liens

--- a/html/profile.html
+++ b/html/profile.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width" />
     <title>Accueil</title>
 
-    <link rel="stylesheet"  type="text/css" href="/css/profile.css" />
-    <link rel="stylesheet"  type="text/css" href="/css/header.css" />
-    <script src="/js/profile.js" defer></script>
-    <script src="/js/header.js" defer></script>
+    <link rel="stylesheet"  type="text/css" href="css/profile.css" />
+    <link rel="stylesheet"  type="text/css" href="css/header.css" />
+    <script src="js/profile.js" defer></script>
+    <script src="js/header.js" defer></script>
   </head>
 
   <header>
     <div id="header">
         <ul id="liste-header">
-            <li><a class="menu droite" href="/index.html">Home</a></li>
-            <li><a class="menu" href="/html/profile.html">Profile</a></li>
+            <li><a class="menu droite" href="index.html">Home</a></li>
+            <li><a class="menu" href="html/profile.html">Profile</a></li>
         </ul>
     </div>
   </header>
