--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width" />
     <title>Accueil</title>
 
-    <link rel="stylesheet"  type="text/css" href="/css/accueil.css" />
-    <link rel="stylesheet"  type="text/css" href="/css/header.css" />
-    <script src="/js/accueil.js" defer></script>
-    <script src="/js/answer.js" defer></script>
-    <script src="/js/header.js" defer></script>
+    <link rel="stylesheet"  type="text/css" href="css/accueil.css" />
+    <link rel="stylesheet"  type="text/css" href="css/header.css" />
+    <script src="js/accueil.js" defer></script>
+    <script src="js/answer.js" defer></script>
+    <script src="js/header.js" defer></script>
   </head>
 
   <header>
     <div id="header">
         <ul id="liste-header">
-            <li><a class="menu droite" href="/index.html">Home</a></li>
-            <li><a class="menu droite" href="/html/profile.html">Profile</a></li>
+            <li><a class="menu droite" href="index.html">Home</a></li>
+            <li><a class="menu droite" href="html/profile.html">Profile</a></li>
         </ul>
     </div>
 
