--- a/html/us.html
+++ b/html/us.html
@@ -14,8 +14,8 @@
   <header>
     <div id="header">
         <ul id="liste-header">
-            <li><a class="menu droite" href="index.html">Home</a></li>
-            <li><a class="menu" href="html/profile.html">Profile</a></li>
+            <li><a class="menu droite" href="index">Home</a></li>
+            <li><a class="menu" href="html/profile">Profile</a></li>
         </ul>
     </div>
   </header>
