Essaye de réparer les liens

--- a/html/profile.html
+++ b/html/profile.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width" />
     <title>Accueil</title>
 
-    <link rel="stylesheet"  type="text/css" href="css/profile.css" />
-    <link rel="stylesheet"  type="text/css" href="css/header.css" />
-    <script src="js/profile.js" defer></script>
-    <script src="js/header.js" defer></script>
+    <link rel="stylesheet"  type="text/css" href="../css/profile.css" />
+    <link rel="stylesheet"  type="text/css" href="../css/header.css" />
+    <script src="../js/profile.js" defer></script>
+    <script src="../js/header.js" defer></script>
   </head>
 
   <header>
     <div id="header">
         <ul id="liste-header">
-            <li><a class="menu droite" href="index">Home</a></li>
-            <li><a class="menu" href="html/profile">Profile</a></li>
+            <li><a class="menu droite" href="../index">Home</a></li>
+            <li><a class="menu" href="profile">Profile</a></li>
         </ul>
     </div>
   </header>
@@ -50,7 +50,7 @@
           But I'm here today to win your heart ❤️, to have the chance to share this moment with you ✨.<br><br>
           Have the opportunity to continue experiencing wonderful moments together like these :
           <p class="discover-link">
-            👉 <a href="/html/us.html">Discover</a>
+            👉 <a href="us">Discover</a>
           </p>
 
 
