--- a/html/us.html
+++ b/html/us.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width" />
     <title>Accueil</title>
 
-    <link rel="stylesheet"  type="text/css" href="css/us.css" />
-    <link rel="stylesheet"  type="text/css" href="css/header.css" />
-    <script src="js/profile.js" defer></script>
-    <script src="js/header.js" defer></script>
+    <link rel="stylesheet"  type="text/css" href="../css/us.css" />
+    <link rel="stylesheet"  type="text/css" href="../css/header.css" />
+    <script src="../js/profile.js" defer></script>
+    <script src="../js/header.js" defer></script>
   </head>
 
   <header>
     <div id="header">
         <ul id="liste-header">
-            <li><a class="menu droite" href="index">Home</a></li>
-            <li><a class="menu" href="html/profile">Profile</a></li>
+            <li><a class="menu droite" href="../index">Home</a></li>
+            <li><a class="menu" href="profile">Profile</a></li>
         </ul>
     </div>
   </header>
