--- a/html/profile.html
+++ b/html/profile.html
@@ -29,9 +29,9 @@
         <button class="carousel-btn prev">‹</button>
 
         <div class="carousel-track">
-          <img src="/img/IMG_5914.jpg" alt="Photo 1">
-          <img src="/img/IMG_5977.jpg" alt="Photo 2">
-          <img src="/img/IMG_6235.jpg" alt="Photo 3">
+          <img src="../img/IMG_5914.jpg" alt="Photo 1">
+          <img src="../img/IMG_5977.jpg" alt="Photo 2">
+          <img src="../img/IMG_6235.jpg" alt="Photo 3">
         </div>
 
         <button class="carousel-btn next">›</button>
