--- a/html/us.html
+++ b/html/us.html
@@ -30,28 +30,28 @@
 
         <div class="carousel-track">
             <div class="carousel-slide">
-                <img src="../img/IMG_2128.jpg" alt="Photo 1">
+                <img src="../assets/images/IMG_2128.jpg" alt="Photo 1">
             </div>
             <div class="carousel-slide">
-                <img src="../img/IMG_2514.jpg" alt="Photo 2">
+                <img src="../assets/images/IMG_2514.jpg" alt="Photo 2">
             </div>
             <div class="carousel-slide">
-                <img src="../img/IMG_3805.jpg" alt="Photo 3">
+                <img src="../assets/images/IMG_3805.jpg" alt="Photo 3">
             </div>
             <div class="carousel-slide">
-                <img src="../img/IMG_5181.jpg" alt="Photo 4">
+                <img src="../assets/images/IMG_5181.jpg" alt="Photo 4">
             </div>
             <div class="carousel-slide">
-                <img src="../img/IMG_5405.jpg" alt="Photo 5">
+                <img src="../assets/images/IMG_5405.jpg" alt="Photo 5">
             </div>
             <div class="carousel-slide">
-                <img src="../img/IMG_5644.jpg" alt="Photo 6">
+                <img src="../assets/images/IMG_5644.jpg" alt="Photo 6">
             </div>
             <div class="carousel-slide">
-                <img src="../img/IMG_5912.jpg" alt="Photo 7">
+                <img src="../assets/images/IMG_5912.jpg" alt="Photo 7">
             </div>
             <div class="carousel-slide">
-                <img src="../img/IMG_6121.jpg" alt="Photo 8">
+                <img src="../assets/images/IMG_6121.jpg" alt="Photo 8">
             </div>
         </div>
 
